<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/iv_nav_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="17dp"
            android:onClick="onBackNavClick"
            android:background="?android:attr/selectableItemBackground"
            android:src="@mipmap/icon_back_chat" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/c_1D1A4D"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:src="@mipmap/ic_launcher_round"
            />
        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Alisha"
            android:textColor="@color/white"
            android:layout_marginStart="12dp"
            android:textSize="17sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/c_1D1A4D"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/follow"
            android:textColor="@color/white"
            android:textSize="17sp"
            />
        <Switch

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            style="@style/Switch"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/c_1D1A4D"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/block"
            android:textColor="@color/white"
            android:textSize="17sp"
            />
        <Switch
            android:id="@+id/switch_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Switch"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_report"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/c_1D1A4D"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/report"
            android:textColor="@color/white"
            android:textSize="17sp"
            />
        <ImageView
            android:layout_width="6dp"
            android:layout_height="10dp"
            android:src="@mipmap/ic_right_chat_option"
            />

    </LinearLayout>
</LinearLayout>