<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="62dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/bg_layout_edit">
        <ImageView
            android:id="@+id/iv_record_voice"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:onClick="onBtnClick"
            android:src="@mipmap/icon_voice_chat_bottom"/>
        <Button
            android:id="@+id/btn_record"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/hold_and_talk"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="13sp"
            android:visibility="gone"
            android:background="@drawable/bg_novip"
            style="?android:attr/borderlessButtonStyle"
            />
        <LinearLayout
            android:id="@+id/ll_msg_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/et_msg_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:maxLength="150"
                android:textColor="@color/white"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="11sp"
                android:text=""
                android:background="@null"/>
            <ImageView
                android:id="@+id/iv_emoji_face"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="11dp"
                android:onClick="onBtnClick"
                android:src="@mipmap/icon_emoji_chat_bottom"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_more"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:onClick="onBtnClick"
            android:src="@mipmap/icon_more_chat_bottom"/>

        <TextView
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginStart="10dp"
            android:text="@string/send"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="13sp"
            android:visibility="gone"
            android:onClick="onBtnClick"
            android:background="@drawable/bg_send"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_option"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:background="#231F59">
        <com.lockulockme.lockuchat.view.EmojiSelectView
            android:id="@+id/emoji_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/ll_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:paddingStart="28dp"
            android:visibility="gone"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/ll_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onBtnClick"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="23dp"
                    android:src="@mipmap/icon_picture_chat"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:layout_marginTop="15dp"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>